# astrolabe-composer-callback

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  tested-versions.json
.github/workflows/: contract-sync.yml  dep-watch.yml  release.yml  test.yml
docs/: contract.md  eval-results.md
docs/frameworks/: composer.md  huggingface.md  lightning.md  pytorch.md
scripts/: check_dep_drift.py  update_tested_version.py
src/astrolabe_callbacks/: __init__.py  _core.py  _distributed.py  composer.py  contract.py  eval_results.py  huggingface.py  lightning.py  pytorch.py
src/astrolabe_composer_callback/: __init__.py  logger.py
tests/: conftest.py  test_composer.py  test_contract_completeness.py  test_core.py  test_distributed.py  test_eval_results.py  test_huggingface.py  test_lightning.py  test_logger.py  test_metric_buffer.py  test_pytorch.py
tools/: check-no-engine-import.py  vendor-contract.json  vendor-contract.py
