[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astrolabe-callbacks"
version = "0.3.0"
description = "Framework-agnostic Aim callbacks for ML training (Composer, Lightning, HuggingFace Trainer, raw PyTorch)"
requires-python = ">=3.10"
authors = [{ name = "Nathan Paull" }]
readme = "README.md"
license = { text = "MIT" }
keywords = [
    "aim",
    "ml-tracking",
    "astrolabe",
    "composer",
    "mosaicml",
    "pytorch-lightning",
    "lightning",
    "huggingface",
    "transformers",
    "pytorch",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Base install pulls only Aim + loguru. Framework-specific callbacks
# live behind extras so users install only what they use.
dependencies = [
    "aim>=3.18",
    "loguru>=0.7",
]

[project.optional-dependencies]
composer = ["mosaicml>=0.20"]
lightning = ["lightning>=2.0"]
hf = ["transformers>=4.30"]
# `all` is the convenience extra for users who don't want to think
# about which framework they need. Most users should pick a single one.
all = [
    "mosaicml>=0.20",
    "lightning>=2.0",
    "transformers>=4.30",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mosaicml>=0.20",
    "lightning>=2.0",
    "transformers>=4.30",
]

[project.urls]
Homepage = "https://github.com/naston/astrolabe-callbacks"
Issues = "https://github.com/naston/astrolabe-callbacks/issues"
"Astrolabe" = "https://github.com/naston/astrolabe"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
